# aux

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  install.ps1  install.sh  llms.txt
.docs/: FAQ.md
cli/: README.md  bootstrap.sh  pyproject.toml
cli/skills/diff/: SKILL.md
cli/skills/find/: SKILL.md
cli/skills/grep/: SKILL.md
cli/skills/ls/: SKILL.md
cli/skills/scan/: SKILL.md
cli/src/aux/: __init__.py  cli.py
cli/src/aux/commands/: __init__.py  diff.py  find.py  grep.py  ls.py  scan.py
cli/src/aux/kernels/: __init__.py  diff.py  find.py  grep.py  ls.py
cli/src/aux/output/: __init__.py  formats.py  truncation.py
cli/src/aux/plans/: __init__.py  schemas.py  validate.py
cli/src/aux/util/: __init__.py  doctor.py  paths.py  subprocess.py
diff/: SKILL.md  bootstrap.ps1  bootstrap.sh
diff/references/: 02_CONTRACTS.md  05_ALWAYS.md
diff/scripts/: skill.ps1  skill.sh
docs/: .INDEX.md  ARCHITECTURE_V2.md  FAQ.md  MIGRATION_V2.md  QUICKSTART.md  TROUBLESHOOTING.md
docs/.observations/: METHODOLOGY.md  SUBJECT.md  TASK.md
docs/benchmark/: .INDEX.md  01_SUMMARY.md  02_RESULTS.md  03_COMPARISON.md  04_QUALITATIVE.md  05_BENEFITS.md  06_DESIGN.md  07_CONCLUSION.md
docs/experiments/: README.md
docs/skills/: .INDEX.md  DIFF.md  FIND.md  GREP.md  LS.md
docs/token_comparison/: POST_DRAFT.md  README.md
find/: bootstrap.ps1  bootstrap.sh
glob/: SKILL.md
grep/: SKILL.md  bootstrap.ps1  bootstrap.sh
ls/: SKILL.md  bootstrap.ps1  bootstrap.sh
regex/: SKILL.md
scripts/: bootstrap.ps1  bootstrap.sh  install.ps1  install.sh
(+173 files in other folders)
