[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aux-skills"
version = "0.2.0"
description = "Agentic Unix Skills CLI - unified command interface for agent-driven codebase exploration"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Jordan Godau" }
]
keywords = ["agent", "skills", "cli", "grep", "find", "diff", "ls"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
]

[project.scripts]
aux = "aux.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/aux"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
